--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,51 @@
+audioop-lts==0.2.1
+av==13.1.0
+beautifulsoup4==4.13.4
+click==8.1.8
+cloup==3.0.7
 colorama==0.4.6
 contourpy==1.3.2
 cycler==0.12.1
+decorator==5.2.1
 fonttools==4.57.0
+glcontext==3.0.0
+imageio==2.37.0
+isosurfaces==0.1.2
+joblib==1.4.2
 kiwisolver==1.4.8
+lazy_loader==0.4
+manim==0.19.0
+ManimPango==0.6.0
+mapbox_earcut==1.0.3
+markdown-it-py==3.0.0
 matplotlib==3.10.1
+mdurl==0.1.2
+moderngl==5.12.0
+moderngl-window==3.1.1
+networkx==3.4.2
 numpy==2.2.5
 opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 packaging==25.0
 pillow==11.2.1
+psutil==7.0.0
+pycairo==1.28.0
+pydub==0.25.1
+pyglet==2.1.5
+pyglm==2.8.2
+Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+rich==14.0.0
+scikit-image==0.25.2
 scipy==1.15.2
+screeninfo==0.8.1
 six==1.17.0
+skia-pathops==0.8.0.post2
+soupsieve==2.7
+srt==3.5.3
+svgelements==1.9.6
+tifffile==2025.3.30
+tqdm==4.67.1
+typing_extensions==4.13.2
+watchdog==6.0.0
